--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
+  base = "foodtrust-site"
   command = "npm run build"
   publish = ".next"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
   NEXT_TELEMETRY_DISABLED = "1"
 
 [[plugins]]
